echo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: echo
  labels:
    app: echo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: echo
